* 2007-07-23 - marcus.klein@open-xchange.com

  - Bugfix #8083: Changed path to GUI for notification links.

* 2007-07-11 - marcus.klein@open-xchange.com

  - Updated missing values.

* 2007-07-03 - marcus.klein@open-xchange.com

  - Initial version.