@@ -42,7 +42,7 @@ AJP_REQUEST_HANDLER_POOL: TRUE
 AJP_REQUEST_HANDLER_POOL_SIZE: 100
 
 # Enable/Disable AJP watcher
-AJP_WATCHER_ENABLED: FALSE
+AJP_WATCHER_ENABLED: TRUE
 
 # Enable/Disable AJP watcher permission to stop & re-init system
 AJP_WATCHER_PERMISSION: FALSE
@@ -54,7 +54,7 @@ AJP_WATCHER_MAX_RUNNING_TIME: 60000
 AJP_WATCHER_FREQUENCY: 30000
 
 # SET HOST'S UNIQUE JVM ROUTE IMPORTANT FOR LOAD BALANCING
-AJP_JVM_ROUTE: MOX0
+AJP_JVM_ROUTE: <JVM_ROUTE>
 
 # DEFINE IF MANDATORY FIRST TWO BYTES OF AN INCOMING AJP PACKAGE
 # (MAGIC BYTES) MUST EXACTLY MATCH SEQUENCE 0x12 0x34 OR IF JUST ONE
