@@ -2,8 +2,8 @@
 useSeparateWrite=false
 
 readDriverClass=com.mysql.jdbc.Driver
-readUrl=jdbc:mysql://oxconfig-read:3306/configdb
-readProperty.1=user=open-xchange
+readUrl=jdbc:mysql://<configdbread>/configdb
+readProperty.1=user=openexchange
 readProperty.2=password=secret
 readProperty.3=useUnicode=true
 readProperty.4=characterEncoding=UTF-8
@@ -15,8 +15,8 @@ readProperty.9=connectTimeout=15000
 readProperty.10=socketTimeout=15000
 
 writeDriverClass=com.mysql.jdbc.Driver
-writeUrl=jdbc:mysql://oxconfig-read:3306/configdb
-writeProperty.1=user=open-xchange
+writeUrl=jdbc:mysql://<configdbread>/configdb
+writeProperty.1=user=openexchange
 writeProperty.2=password=secret
 writeProperty.3=useUnicode=true
 writeProperty.4=characterEncoding=UTF-8
@@ -40,10 +40,10 @@ maxIdleTime=60000
 # Maximum number of active connections.
 # This value is overwritten for OX databases from configdb.
 # exhaustedAction must be BLOCK.
-maxActive=50
+maxActive=100
 # Maximum time a thread waits for a connection.
 # exhaustedAction must be BLOCK.
-maxWait=30000
+maxWait=10000
 # Maximum time a connection will be used.
 maxLifeTime=600000
 # BLOCK: If maxActive number of connections is reached threads have to wait for a connection.
