@@ -10,5 +10,6 @@ ENABLE_FOLDER_CACHE: TRUE
 IGNORE_SHARED_ADDRESSBOOK=TRUE
 
 # Define if users are allowed to edit their own contact object
-# contained in folder 'Global Address Book' aka 'Internal Users'
+# contained in folder 'Global Address Book' aka 'Internal Users'. Switching this
+# parameter only has an effect for new created contexts.
 ENABLE_INTERNAL_USER_EDIT=FALSE
