@@ -50,9 +50,9 @@ imapQuoteLineColors=#a14044,#917722,#599351,#516193,#666666
 # Possible value are: session, user.imapLogin and other
 imapCredSrc=session
 
-# Define if IMAP server supports ACLs. Possible values: true/false
-# NOTE: This value is going to be overwritten if request of capabilities
-# from IMAP server does not fail
+# Define if IMAP server supports ACLs. Possible values: true/false/auto
+# NOTE: Value "auto" means to use server-defined ACL support as indicated
+# through response to IMAP command "CAPABILITY"
 imapSupportsACL=false
 
 # Enable/disable SMTP Authentication
@@ -64,24 +64,24 @@ imapTimeout=5000
 
 # Define the socket connection timeout value in milliseconds. A value less
 # or equal to zero is infinite timeout
-imapConnectionTimeout=30000
+imapConnectionTimeout=10000
 
 # Specify max number of IMAP connection that exists at the same time
 imapMaxNumOfConnections=0
 
 # Define the encoding for IMAP authentication
-imapAuthEnc=ISO-8859-1
+imapAuthEnc=UTF-8
 
 # Enable/disable user flags
 userFlagsEnabled=false
 
 # Define the implementing class of PartModifier
-partModifierImpl=com.openexchange.groupware.imap.DummyPartModifier
+partModifierImpl=com.openexchange.imap.DummyPartModifier
 
 # Define max. IMAP connection idle time in milliseconds or in other words
 # how long an established IMAP connection is going to be kept alive while
 # it's idle. NOTE: This is for future use and not yet implemented!
-maxIMAPConnectionIdleTime=900000
+maxIMAPConnectionIdleTime=60000
 
 # This property defines if the default folders of an user (Draft, Sent, Spam
 # & Trash) are going to be placed right below folder "INBOX" even if
