@@ -6,7 +6,7 @@
 PrefetchEnabled=true
 
 # Upload Parameter
-UPLOAD_DIRECTORY=/var/spool/open-xchange
+UPLOAD_DIRECTORY=/tmp/
 
 # If the sum of all uploaded files in one request is greater than this value, the upload will be rejected.
 # This value can be overridden on a per-module basis by setting the MAX_UPLOAD_SIZE parameter in the modules
