@@ -34,3 +34,6 @@ ajax/quota:com.openexchange.ajax.Quota
 ajax/control:com.openexchange.ajax.ConfigJump
 ajax/import*:com.openexchange.ajax.ImportServlet
 ajax/export*:com.openexchange.ajax.ExportServlet
+
+# Sync
+ajax/sync*:com.openexchange.ajax.SyncServlet
