@@ -3,11 +3,19 @@
 # These implementing classes should be located in package
 # 'com.openexchange.groupware.update.tasks' 
 
+# Version 1
 com.openexchange.groupware.update.tasks.CreateTableVersion
 com.openexchange.groupware.update.tasks.SpamUpdateTask
 com.openexchange.groupware.update.tasks.PasswordMechUpdateTask
+# Version 2
 com.openexchange.groupware.calendar.update.AlterMailAddressLength
-com.openexchange.groupware.calendar.update.AlterCreatingDate
 com.openexchange.groupware.update.tasks.TaskModifiedByNotNull
+# Version 4
 com.openexchange.groupware.update.tasks.DelFolderTreeTableUpdateTask
+# Version 5
 com.openexchange.groupware.update.tasks.UnboundFolderReplacementUpdateTask
+# Version 6
+com.openexchange.groupware.calendar.update.AlterCreatingDate
+com.openexchange.groupware.update.tasks.TaskReminderFolderZero
+# Version 7
+com.openexchange.groupware.update.tasks.NewAdminExtensionsUpdateTask
