@@ -1,3 +1,7 @@
+* 2007-08-02 - marcus.klein@open-xchange.com
+
+ - Bugfix #8175: Added -XX:+UseConcMarkSweepGC to memory options.
+
 * 2007-07-23 - marcus.klein@open-xchange.com
 
   - Bugfix #8083: Changed path to GUI for notification links.
